--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     </li>
 </ul>
 </nav>
-
+<button class="mobile-open-btn" type="button">
+    <svg mobile-open-btn-icon width="24" height="24">
+        <use href="./images/icons.svg#icon-burger"></use>
+    </svg>
+</button>
 <address class="address">
     <ul class="address list">
         <li>
@@ -50,19 +54,19 @@
 
     </header>
     <!-- Hero Section -->
-    <main>
+    <!-- <main>
         <section class="main-title">
             <div class="container">
             <h1 class="title">Effective Solutions for Your Business</h1>
             <button class="order-service" type="button">Order Service</button>
             </div>
-        </section>
+        </section> -->
 
 
         
 
 
-<!-- Our benefits -->
+<!-- Our benefits
         <section class="strengths section">
             <div class="container">
             <h2 class="visually-hidden">Our benefits</h2>
@@ -110,11 +114,11 @@
                 </li>
             </ul>
             </div>
-        </section>
+        </section> -->
 
         <!-- Our Team -->
 
-<section class="team section">
+<!-- <section class="team section">
     <div class="container">
     <h2 class="group">Our Team</h2>
     <ul class="team-member list"> 
@@ -279,9 +283,9 @@
         </li>
 </ul>
     </div>
-</section>
+</section> -->
 <!-- Our portfolio -->
-<section class="portfolio section">
+<!-- <section class="portfolio section">
     <div class="container">
     <h2 class="portfolio-title">Our Portfolio</h2>
     <ul class="portfolio-projects list">
@@ -451,16 +455,16 @@
 
             </div>
     </div>
-   </footer>
+   </footer> -->
 
-<div class="backdrop">
+<!-- <div class="backdrop">
     <div class="modal">
 <button class="modal-close-btn" type="button">
     <svg class="modal-close-btn-icon" width="8" height="8">
 <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-    </svg>
+    </svg> -->
 
-</button>
+<!-- </button>
 <p class="review-form-description">
     Leave your contacts and we will call you back
 </p>
@@ -551,6 +555,22 @@
 
      </form>
     </div>
+    </div> -->
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+<div class="container">
+    <button class="mobile-menu-close-btn" type="button">
+        <svg class="mobile-menu-close-btn-icon" width="8" height="8">
+<use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+        </svg>
+    </button>
+    <ul mobile-menu-list list>
+        <li class="mobile-menu-item">Studio</li>
+        <li class="mobile-menu-item">Portfolio</li>
+        <li class="mobile-menu-item">Contacts</li>
+    </ul>
+</div>
     </div>
+
 </body>
 </html>
