--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
         </svg>
     </button>
     <ul mobile-menu-list list>
-        <li class="mobile-menu-item">Studio</li>
+        <li class="mobile-menu-item mobile-studio">Studio</li>
         <li class="mobile-menu-item">Portfolio</li>
         <li class="mobile-menu-item">Contacts</li>
     </ul>
