--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
 
     </header>
     <!-- Hero Section -->
-    <!-- <main>
+    <main>
         <section class="main-title">
             <div class="container">
             <h1 class="title">Effective Solutions for Your Business</h1>
             <button class="order-service" type="button">Order Service</button>
             </div>
-        </section> -->
+        </section>
+    <!-- Hero Section -->
 
 
         
 
-
-<!-- Our benefits
+<!-- =======Our Benefits======== -->
         <section class="strengths section">
             <div class="container">
             <h2 class="visually-hidden">Our benefits</h2>
             <ul class="strengths-item list">
                 <li class="strengths-list benefits-section">
-                    <div class="benefits-list">
+                    <div class="benefits-list visually-hidden">
                     <svg class="benefits-icon" width="64" height="64">
                         <use href="./images/icons.svg#icon-antenna-1">
                         </use>
@@ -101,7 +101,7 @@
                     </div>
                     <h3 class="strengths-name">Diligence</h3>
                     <p class="strengths-descr">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
+                </li> 
                 <li class="strengths-list benefits-section">
                     <div class="benefits-list">
                         <svg class="benefits-icon" width="64" height="64">
@@ -114,11 +114,12 @@
                 </li>
             </ul>
             </div>
-        </section> -->
+        </section> 
+<!-- =======Our Benefits======== -->
 
         <!-- Our Team -->
 
-<!-- <section class="team section">
+<section class="team section">
     <div class="container">
     <h2 class="group">Our Team</h2>
     <ul class="team-member list"> 
@@ -126,7 +127,7 @@
         <li class="acquaintance">
 
             <img src="./images/mark.jpg" alt="Foto Mark Querrero" width="264" height="260"
-            />
+            /> 
             <div class="name">
             <h3 class="section-heading">Mark Guerrero</h3>
             <p class="section-description">Product Designer</p>
@@ -283,16 +284,18 @@
         </li>
 </ul>
     </div>
-</section> -->
+</section> 
+<!-- ========Our Team======= -->
+
 <!-- Our portfolio -->
-<!-- <section class="portfolio section">
+<section class="portfolio section">
     <div class="container">
     <h2 class="portfolio-title">Our Portfolio</h2>
     <ul class="portfolio-projects list">
 
         <li class="finished-projects">
          <div class="overlay-wrapper">
-            <img src="./images/img-6-2.jpg" alt="Project Card Banking" width="360" height="300"
+            <img src="./images/img-6-2.jpg" alt="Project Card Banking" width="288" height="280"
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -310,8 +313,8 @@
             <div class="overlay-wrapper">
             <img src="./images/img-5-2.jpg" 
             alt="Project Card Cashless" 
-            width="360" 
-            height="300" 
+            width="288" 
+            height="280" 
             />
                         <p class="overlay">
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -328,7 +331,7 @@
 
         <li class="finished-projects">
            <div class="overlay-wrapper">
-            <img src="./images/img-4-2.jpg" alt="Project Card Meditation" width="360" height="300" 
+            <img src="./images/img-4-2.jpg" alt="Project Card Meditation" width="288" height="280" 
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -360,7 +363,7 @@
 
         <li class="finished-projects">
             <div class="overlay-wrapper">
-            <img src="./images/img-2-2.jpg" alt="Project Card Screen" width="360" height="300" 
+            <img src="./images/img-2-2.jpg" alt="Project Card Screen" width="288" height="280" 
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -455,7 +458,7 @@
 
             </div>
     </div>
-   </footer> -->
+   </footer>
 
 <!-- <div class="backdrop">
     <div class="modal">
@@ -556,19 +559,84 @@
      </form>
     </div>
     </div> -->
+
     <!-- Mobile Menu -->
     <div class="mobile-menu">
-<div class="container">
+<div class="container mobile-container">
     <button class="mobile-menu-close-btn" type="button">
         <svg class="mobile-menu-close-btn-icon" width="8" height="8">
 <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
         </svg>
     </button>
-    <ul mobile-menu-list list>
-        <li class="mobile-menu-item mobile-studio">Studio</li>
-        <li class="mobile-menu-item">Portfolio</li>
-        <li class="mobile-menu-item">Contacts</li>
+    <div class="mobile-link-wrapper">
+        <div class="mobile-nav-container">
+            <nav class="mobile-nav">
+    <ul class="mobile-menu-nav-list list">
+        <li class="mobile-menu-item mobile-studio">
+            <a class="mobile-menu-link link mobile-menu-current-page"
+            href="./index.html">Studio</a>
+            
+        </li>
+        <li class="mobile-menu-item">
+            <a class="mobile-menu-link link" href="">Portfolio</a>
+            </li>
+        <li class="mobile-menu-item">
+            <a class="mobile-menu-link link" href="">Contacts</a>
+            </li>
     </ul>
+    </nav>
+    </div>
+    <div class="contact-social-wrapper">
+        <address class="mobile-contact link">
+<ul class="mobile-contact-list list">
+    <li class="mobile-contact-item">
+<a class="mobile-contact-link mobile-contact-link-tel link"
+href="tel:+110001111111"
+target="_blank"
+>+11 (000) 111-11-11
+</a>
+    </li>
+    <li class="mobile-contact-item">
+<a class="mobile-contact-link link" 
+href="mailto:info@devstudio.com">info@devstudio.com
+
+</a>
+    </li>
+</ul>
+        </address>
+    </div>
+    <ul class="mobile-item-icon list">
+        <li class="mobile-social-link">
+            <a href="" class="mobile-list-icon">
+                <svg class="mobile-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="mobile-social-link">
+            <a href="" class="mobile-list-icon">
+                <svg class="mobile-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="mobile-social-link">
+            <a href="" class="mobile-list-icon">
+                <svg class="mobile-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="mobile-social-link">
+            <a href="" class="mobile-list-icon">
+                <svg class="mobile-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+            </a>
+        </li>
+    </ul>
+    </div>
+    </div>
 </div>
     </div>
 
