--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h2 class="visually-hidden">Our benefits</h2>
             <ul class="strengths-item list">
                 <li class="strengths-list benefits-section">
-                    <div class="benefits-list visually-hidden">
+                    <div class="benefits-list">
                     <svg class="benefits-icon" width="64" height="64">
                         <use href="./images/icons.svg#icon-antenna-1">
                         </use>
@@ -459,15 +459,15 @@
             </div>
     </div>
    </footer>
-
-<!-- <div class="backdrop">
+<!-- ======== BACKDROP ====== -->
+<div class="backdrop">
     <div class="modal">
 <button class="modal-close-btn" type="button">
     <svg class="modal-close-btn-icon" width="8" height="8">
 <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-    </svg> -->
+    </svg> 
 
-<!-- </button>
+</button>
 <p class="review-form-description">
     Leave your contacts and we will call you back
 </p>
@@ -558,10 +558,11 @@
 
      </form>
     </div>
-    </div> -->
+    </div>
+<!-- ======== BACKDROP ====== -->
 
     <!-- Mobile Menu -->
-    <div class="mobile-menu">
+    <!-- <div class="mobile-menu">
 <div class="container mobile-container">
     <button class="mobile-menu-close-btn" type="button">
         <svg class="mobile-menu-close-btn-icon" width="8" height="8">
@@ -638,7 +639,7 @@ href="mailto:info@devstudio.com">info@devstudio.com
     </div>
     </div>
 </div>
-    </div>
+    </div> -->
 
 </body>
 </html>
