--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
         <li class="finished-projects">
          <div class="overlay-wrapper">
-            <img src="./images/img-6-2.jpg" alt="Project Card Banking" width="288" height="280"
+            <img src="./images/img-6-2.jpg" alt="Project Card Banking" width="360" height="300"
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -313,8 +313,8 @@
             <div class="overlay-wrapper">
             <img src="./images/img-5-2.jpg" 
             alt="Project Card Cashless" 
-            width="288" 
-            height="280" 
+            width="360" 
+            height="300" 
             />
                         <p class="overlay">
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -331,7 +331,7 @@
 
         <li class="finished-projects">
            <div class="overlay-wrapper">
-            <img src="./images/img-4-2.jpg" alt="Project Card Meditation" width="288" height="280" 
+            <img src="./images/img-4-2.jpg" alt="Project Card Meditation" width="360" height="300" 
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -363,7 +363,7 @@
 
         <li class="finished-projects">
             <div class="overlay-wrapper">
-            <img src="./images/img-2-2.jpg" alt="Project Card Screen" width="288" height="280" 
+            <img src="./images/img-2-2.jpg" alt="Project Card Screen" width="360" height="300" 
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -562,7 +562,7 @@
 <!-- ======== BACKDROP ====== -->
 
     <!-- Mobile Menu -->
-    <!-- <div class="mobile-menu">
+    <div class="mobile-menu">
 <div class="container mobile-container">
     <button class="mobile-menu-close-btn" type="button">
         <svg class="mobile-menu-close-btn-icon" width="8" height="8">
@@ -639,7 +639,7 @@ href="mailto:info@devstudio.com">info@devstudio.com
     </div>
     </div>
 </div>
-    </div> -->
+    </div> 
 
 </body>
 </html>
