--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </svg>
 </button>
 <address class="address">
-    <ul class="address list">
+    <ul class="address-list list">
         <li>
             <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -560,7 +560,6 @@
 
     <!-- Mobile Menu -->
     <div class="mobile-menu">
-<div class="container mobile-container">
     <button class="mobile-menu-close-btn" type="button">
         <svg class="mobile-menu-close-btn-icon" width="8" height="8">
 <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
@@ -575,7 +574,7 @@
             href="./index.html">Studio</a>
             
         </li>
-        <li class="mobile-menu-item">
+        <li class="mobile-menu-item ">
             <a class="mobile-menu-link link" href="">Portfolio</a>
             </li>
         <li class="mobile-menu-item">
@@ -587,14 +586,14 @@
     <div class="contact-social-wrapper">
         <address class="mobile-contact link">
 <ul class="mobile-contact-list list">
-    <li class="mobile-contact-item">
+    <li class="mobile-contact-item link">
 <a class="mobile-contact-link mobile-contact-link-tel link"
 href="tel:+110001111111"
 target="_blank"
 >+11 (000) 111-11-11
 </a>
     </li>
-    <li class="mobile-contact-item">
+    <li class="mobile-contact-item link">
 <a class="mobile-contact-link link" 
 href="mailto:info@devstudio.com">info@devstudio.com
 
@@ -635,8 +634,5 @@ href="mailto:info@devstudio.com">info@devstudio.com
     </ul>
     </div>
     </div>
-</div>
-    </div> 
-
 </body>
 </html>
