--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
     <main>
         <section class="main-title">
             <div class="container">
+                <img 
+                srcset="
+                ../images/retina/Dark-bg-mobile.jpg 320w
+                ../images/retina/Dark-bg-tablet.jpg 768w
+                ../images/retina/people-office 1-desktop.jpg 1440w
+                ../images/retina/Dark-bg@2x-mobile.jpg 320w
+                ../images/retina/Dark-bg@2x-tablet.jpg 768w
+                ../images/retina/people-office 1@2x-desktop.jpg 1440w"
+                sizes="(min-width: 1168px) 1440px, (min-width: 768px) 768px, (max-width: 767px) 320px">
             <h1 class="title">Effective Solutions for Your Business</h1>
             <button class="order-service" type="button">Order Service</button>
             </div>
@@ -292,7 +301,15 @@
 
         <li class="finished-projects">
          <div class="overlay-wrapper">
-            <img src="./images/img-6-2.jpg" alt="Project Card Banking" width="360" height="300"
+            <img 
+            srcset="
+            ./images/retina/img-5-mobile.jpg 288w
+            ./images/retina/img@2x-5-mobile.jpg 288w
+            ./images/retina/img-5-tablet.jpg 356w
+            ./images/retina/img@2x-5-tablet.jpg 356w
+            "
+            sizes="(min-width: 1168px) 360px, (min-width: 768px) 356px, (max-width:767px) 288px"
+            src="./images/img-6-2.jpg" alt="Project Card Banking" width="360" height="300"
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
