--- a/index.html
+++ b/index.html
@@ -325,7 +325,15 @@
 
         <li class="finished-projects">
             <div class="overlay-wrapper">
-            <img src="./images/img-5-2.jpg" 
+            <img 
+            srcset="
+            ./images/retina/img-4-mobile.jpg 288w
+            ./images/retina/img@2x-4-mobile.jpg 288w
+            ./images/retina/img-4-tablet.jpg 356w
+            ./images/retina/img@2x-4-tablet.jpg 356w"
+            sizes="(min-width: 1168px) 360px, (min-width: 768px) 356px, (max-width:767px) 288px"
+
+            src="./images/img-5-2.jpg" 
             alt="Project Card Cashless" 
             width="360" 
             height="300" 
@@ -345,7 +353,15 @@
 
         <li class="finished-projects">
            <div class="overlay-wrapper">
-            <img src="./images/img-4-2.jpg" alt="Project Card Meditation" width="360" height="300" 
+            <img 
+            srcset="
+            ./images/retina/img-3-mobile.jpg 288w
+            ./images/retina/img@2x-3-mobile.jpg 288w
+            ./images/retina/img-3-tablet.jpg 356w
+            ./images/retina/img@2x-3-tablet.jpg 356w"
+            sizes="(min-width: 1168px) 360px, (min-width: 768px) 356px, (max-width:767px) 288px"
+
+            src="./images/img-4-2.jpg" alt="Project Card Meditation" width="360" height="300" 
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -361,7 +377,15 @@
 
         <li class="finished-projects">
             <div class="overlay-wrapper">
-            <img src="./images/img-3-2.jpg" alt="Project Card Taxi" width="360" height="300" 
+            <img 
+            srcset="
+            ./images/retina/img-2-mobile.jpg 288w
+            ./images/retina/img-2-tablet.jpg 356w
+            ./images/retina/img@2x-2-mobile.jpg 288w
+            ./images/retina/img@2x-2-tablet.jpg 356w"
+            sizes="(min-width: 1168px) 360px, (min-width: 768px) 356px, (max-width:767px) 288px"
+
+            src="./images/img-3-2.jpg" alt="Project Card Taxi" width="360" height="300" 
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -377,7 +401,15 @@
 
         <li class="finished-projects">
             <div class="overlay-wrapper">
-            <img src="./images/img-2-2.jpg" alt="Project Card Screen" width="360" height="300" 
+            <img 
+            srcset="
+            ./images/retina/img-1-mobile.jpg 288w
+            ./images/retina/img-1-tablet.jpg 356w
+            ./images/retina/img@2x-1-mobile.jpg 288
+            ./images/retina/img@2x-1-tablet.jpg 356w"
+            sizes="(min-width: 1168px) 360px, (min-width: 768px) 356px, (max-width:767px) 288px"
+
+            src="./images/img-2-2.jpg" alt="Project Card Screen" width="360" height="300" 
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
@@ -393,7 +425,15 @@
 
         <li class="finished-projects">
             <div class="overlay-wrapper">
-            <img src="./images/img-7.jpg" alt="Project Card Online" width="360" height="300" 
+            <img 
+            srcset="
+            ./images/retina/img-mobile.jpg 288w
+            ./images/retina/img-tablet.jpg 356w
+            ./images/retina/img@2x-mobile.jpg 288w
+            ./images/retina/img@2x-tablet.jpg 356w"
+            sizes="(min-width: 1168px) 360px, (min-width: 768px) 356px, (max-width:767px) 288px"
+
+            src="./images/img-7.jpg" alt="Project Card Online" width="360" height="300" 
             />
             <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
