--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
 
         <li class="acquaintance">
 
-            <img src="./images/mark.jpg" alt="Foto Mark Querrero" width="264" height="260"
+            <img 
+            srcset="./images/retina/mark-img@2x.jpg"
+            src="./images/mark.jpg" alt="Foto Mark Querrero" width="264" height="260"
             /> 
             <div class="name">
             <h3 class="section-heading">Mark Guerrero</h3>
@@ -172,7 +174,9 @@
 
         <li class="acquaintance">
 
-            <img src="./images/tom.jpg" alt="Foto Tom Ford" width="264" height="260"
+            <img 
+            srcset="./images/retina/tom-img@2x.jpg"
+            src="./images/tom.jpg" alt="Foto Tom Ford" width="264" height="260"
             />
             <div class="name">
             <h3 class="section-heading">Tom Ford</h3>
@@ -212,7 +216,9 @@
 
         <li class="acquaintance">
 
-            <img src="./images/camila.jpg" alt="Foto Camila Garcia" width="264" height="260"
+            <img 
+            srcset="./images/retina/camila-img@2x.jpg"
+            src="./images/camila.jpg" alt="Foto Camila Garcia" width="264" height="260"
             />
             <div class="name">
             <h3 class="section-heading">Camila Garcia</h3>
@@ -251,7 +257,9 @@
         </li>
         <li class="acquaintance">
             
-            <img src="./images/daniel.jpg" alt="Foto Daniel Wilson" width="264" height="260"
+            <img 
+            srcset="./images/retina/daniel-img@2x.jpg"
+            src="./images/daniel.jpg" alt="Foto Daniel Wilson" width="264" height="260"
             />
             <div class="name">
             <h3 class="section-heading">Daniel Wilson</h3>
